# Parallel--Simulation-PoW-

./: .gitignore  Dockerfile  Makefile  README.md  bench.csv  chain.json  pyproject.toml  requirements.txt  run.ps1
ppowsim/: __init__.py  benchmark.py  benchmarks.py  blockchain.py  cli.py  mempool.py  merkle.py  miner.py  mining.py  utils.py
scripts/: demo.sh
tests/: test_basic.py
