
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ppowsim"
version = "0.1.0"
description = "Parallel Proof-of-Work blockchain simulator"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "ppowsim"}]
dependencies = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]
